# backend/docs/swagger.yaml
@@ -1028,26 +1028,6 @@ paths:
       tags:
       - products
   /api/admin/services:
-    get:
-      description: Получить список услуг
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/github_com_Neimess_zorkin-store-project_internal_transport_http_restHTTP_service_dto.ServiceResponse'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: List services
-      tags:
-      - services
     post:
       consumes:
       - application/json
@@ -1114,38 +1094,6 @@ paths:
       security:
       - BearerAuth: []
       summary: Delete service
-      tags:
-      - services
-    get:
-      description: Получить услугу по ID
-      parameters:
-      - description: Service ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_internal_transport_http_restHTTP_service_dto.ServiceResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get service by ID
       tags:
       - services
     put:
@@ -1453,6 +1401,56 @@ paths:
       summary: List products by category
       tags:
       - products
+  /api/services:
+    get:
+      description: Получить публичный список услуг
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_Neimess_zorkin-store-project_internal_transport_http_restHTTP_service_dto.ServiceResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
+      summary: List services (public)
+      tags:
+      - services
+  /api/services/{id}:
+    get:
+      description: Получить услугу по ID
+      parameters:
+      - description: Service ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_internal_transport_http_restHTTP_service_dto.ServiceResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_Neimess_zorkin-store-project_pkg_httputils.ErrorResponse'
+      summary: Get service by ID
+      tags:
+      - services
 securityDefinitions:
   BearerAuth:
     description: Type **"Bearer <JWT>"** here
